# Yggdrasil

./: .dockerignore  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.en.md  README.md  README.zh-CN.md
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs  managed_host.rs
crates/ygg-cli/: Cargo.toml
crates/ygg-cli/src/: cli.rs  lib.rs  main.rs
crates/ygg-cli/src/commands/: audit.rs  capability.rs  composition.rs  conformance_package.rs  contract.rs  demo.rs  host.rs  host_access.rs  host_changes.rs  host_connection.rs  host_data.rs  install.rs  list_installed.rs  lockfile.rs  manifest.rs  mod.rs  package.rs  perf.rs  project.rs  target_agent.rs  uninstall.rs  update.rs  world_bundle.rs
crates/ygg-cli/src/conformance/: agentic_forge.rs  artifact_store.rs  audit.rs  core.rs  creator_loop.rs  experience_observability.rs  experience_runtime.rs  fixtures.rs  generated.rs  git_install.rs  git_tools.rs  hooks.rs  inference_local.rs  inference_playtest.rs  inproc.rs  install_lab.rs  install_real_smoke.rs  integrity_tools.rs  live_model.rs  memory_lab.rs  mod.rs  network.rs  official_foundation.rs  official_labs.rs  official_play_creation.rs  permissions.rs  playable_creation_board.rs  project_intake_lab.rs  project_lifecycle.rs  project_secret.rs  proposals.rs  protocol.rs  protocol_project.rs  replacement.rs  runner.rs  secret_conformance.rs  secret_store.rs  sharing_lab.rs  storage_backend.rs  storage_lab.rs  (+8 more)
crates/ygg-cli/src/conformance/fixtures/install/pkg-a/: manifest.yaml
crates/ygg-cli/src/conformance/fixtures/install/pkg-a-broken-dep/: manifest.yaml
crates/ygg-cli/src/conformance/fixtures/install/pkg-b/: manifest.yaml
crates/ygg-cli/src/conformance/fixtures/install/pkg-broken-manifest/: manifest.yaml
crates/ygg-cli/src/conformance/fixtures/integrity/: README.md
crates/ygg-cli/src/conformance/registry/: agentic_forge_phase_a.rs  agentic_forge_phase_b.rs  agentic_forge_phase_c.rs  agentic_forge_phase_d.rs  agentic_forge_phase_f.rs  asset.rs  composition.rs  core.rs  core_runtime.rs  creator_loop_beta_5.rs  experience_observability_beta_3.rs  experience_runtime.rs  external_project_install.rs  generated_packages.rs  git_tools_lab_package_installation_foundation_i2.rs  hooks.rs  host.rs  inference_local.rs  inference_playtest.rs  inproc.rs  install_lab_package_installation_foundation_i4.rs  integrity_lab_package_installation_foundation_i3.rs  kernel_v1_outbound_execute.rs  live_http_outbound.rs  live_model.rs  live_model_providers.rs  live_model_quirks.rs  memory_lab_beta_4.rs  mod.rs  network.rs  official_experience_agent.rs  official_foundation_labs.rs  outbound.rs  outbound_model_streaming.rs  package_check_reload.rs  permissions.rs  playable_board_beta_1.rs  playable_board_beta_2.rs  project_intake_lab_e5_external_project_operating_plane_alpha_e5_adapte.rs  project_intake_lab_external_project_operating_plane_alpha_e1.rs  (+29 more)
crates/ygg-cli/src/install/: consent.rs  mod.rs  url_parser.rs
crates/ygg-cli/src/schema_export/: defs.rs  events.rs  methods.rs  mod.rs  write.rs
crates/ygg-cli/src/templates/: mod.rs
crates/ygg-cli/tests/: conformance_package_kit.rs  host_profile.rs  install_commands.rs
crates/ygg-core/: Cargo.toml
crates/ygg-core/src/: asset.rs  capability_handle.rs  change.rs  component.rs  conformance.rs  effect.rs  event.rs  ids.rs  lib.rs  lockfile.rs  manifest.rs  model.rs  paths.rs  project.rs  prompt.rs  protocol_descriptor.rs  secret_ref.rs  session.rs  world_bundle.rs
crates/ygg-runtime/: Cargo.toml
crates/ygg-runtime/src/: capability.rs  contract.rs  event_store.rs  inproc.rs  lib.rs  model.rs  object_store.rs  package.rs  pi.rs  project_registry.rs  project_secret.rs  protocol.rs  protocol_commons.rs  redaction.rs  runtime.rs  schema.rs  secret.rs  secret_store.rs  storage.rs  subprocess.rs  target_deployment.rs  tavern.rs
crates/ygg-runtime/src/inproc/: agentic_forge_lab.rs  capability_tool_bridge_lab.rs  common.rs  context_lab.rs  docker_runtime_lab.rs  experience_observability_lab.rs  experience_runtime_lab.rs  git_tools_lab.rs  inference_local_lab.rs  inference_playtest_lab.rs  install_lab.rs  integrity_lab.rs  knowledge_lab.rs  memory_lab.rs  model_connector_lab.rs  model_provider_lab.rs  model_routing_lab.rs  package_installer_lab.rs  persona_lab.rs  pi_agent_runtime_lab.rs  playable_creation_board.rs  playable_seed.rs  project_intake_lab.rs  projection_lab.rs  safety.rs  secret_store_lab.rs  sharing_lab.rs  storage_lab.rs  tdb_retrieval_lab.rs  text_transform_lab.rs  thirdparty_agent_runtime.rs  workspace_lab.rs
crates/ygg-runtime/src/inproc/install_lab/: executor.rs  fs_copy.rs  gc.rs  intake.rs  layout.rs  mod.rs  planner.rs  project_kind.rs  source.rs  types.rs  update_check.rs  updater.rs
crates/ygg-runtime/src/runtime/: artifacts.rs  assets.rs  audit.rs  branches.rs  capabilities.rs  effects.rs  events.rs  handles.rs  hooks.rs  local_exec.rs  mod.rs  network.rs  outbound.rs  outbound_sse.rs  outbound_websocket.rs  packages.rs  permissions.rs  projections.rs  proposals.rs  protocol_dispatch.rs  remote.rs  session.rs  streaming.rs  wasm.rs  world_bundle.rs
crates/ygg-runtime/src/runtime/protocol/: assets_projections.rs  audit.rs  capabilities.rs  local_exec.rs  mod.rs  outbound_dispatch.rs  packages.rs  permissions.rs  projects.rs  proposals.rs  sessions_events.rs  surface.rs  tests.rs
crates/ygg-service/: Cargo.toml
crates/ygg-service/src/: development.rs  host_access.rs  lib.rs  target_agent.rs
crates/ygg-service/src/target_agent/: driver.rs  operation.rs  tunnel.rs
integrations/tdb/rust-adapter/: Cargo.toml  README.md
integrations/tdb/rust-adapter-real-crate/: Cargo.toml
integrations/tdb/rust-adapter/src/: main.rs
sdk/rust/yg-kernel-sdk/: Cargo.toml
sdk/rust/yg-kernel-sdk/src/: client.rs  events.rs  lib.rs  methods.rs  types.rs
sdk/rust/yg-kernel-sdk/tests/: public_api.rs
(+666 files in other folders)
