[package]
name = "ygg-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "ygg"

[[bin]]
name = "ygg"
path = "src/main.rs"

[[bin]]
name = "export-schemas"
path = "src/bin/export-schemas.rs"

[[bin]]
name = "validate-schemas"
path = "src/bin/validate-schemas.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
heck = "0.5"
jsonschema.workspace = true
prettyplease = "0.2"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
syn = "2"
tempfile = "3"
tokio.workspace = true
tracing-subscriber.workspace = true
typify = "0.6"
ygg-core.workspace = true
ygg-runtime.workspace = true
ygg-service.workspace = true

[features]
default = []
postgres = ["ygg-runtime/postgres"]
