[package]
name = "ygg-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "ygg"

[[bin]]
name = "ygg"
path = "src/main.rs"

[[bin]]
name = "export-schemas"
path = "src/bin/export-schemas.rs"

[[bin]]
name = "validate-schemas"
path = "src/bin/validate-schemas.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
chrono.workspace = true
clap.workspace = true
console = "0.15"
dialoguer = "0.11"
heck = "0.5"
jsonschema.workspace = true
prettyplease = "0.2"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sequoia-openpgp = { version = "1.21", default-features = false, features = ["compression", "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
syn = "2"
tempfile = "3"
tokio.workspace = true
tracing-subscriber.workspace = true
typify = "0.6"
toml.workspace = true
url.workspace = true
ygg-core.workspace = true
ygg-runtime.workspace = true
ygg-service.workspace = true

[features]
default = []
postgres = ["ygg-runtime/postgres"]
