[package]
name = "ygg-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
semver.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
toml.workspace = true
