[package]
name = "ygg-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
ygg-core.workspace = true
reqwest.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

[features]
default = []
postgres = ["tokio-postgres", "deadpool-postgres"]

[dependencies.tokio-postgres]
workspace = true
optional = true

[dependencies.deadpool-postgres]
workspace = true
optional = true
