[package]
name = "ygg-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
reqwest.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.24"
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
ygg-core.workspace = true
ygg-runtime.workspace = true

[dev-dependencies]
tempfile = "3"
tower.workspace = true
