[package]
name = "ygg-desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Yggdrasil desktop application"
authors = ["Yggdrasil contributors"]
license = "AGPL-3.0"

[lib]
name = "ygg_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
ygg-runtime = { path = "../../../crates/ygg-runtime" }
ygg-core = { path = "../../../crates/ygg-core" }
