[package]
name = "ygg-tdb-rust-adapter-real-crate"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[workspace]

[features]
default = []
real-tdb = ["dep:triviumdb"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
triviumdb = { version = "0.7.0", optional = true, default-features = false }

[[bin]]
name = "ygg-tdb-rust-adapter"
path = "../rust-adapter/src/main.rs"
