[package]
name = "ygg-tdb-rust-adapter"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[workspace]

[features]
default = []
real-tdb = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "ygg-tdb-rust-adapter"
path = "src/main.rs"
