[package]
name = "yg-kernel-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Generated Rust SDK for the Yggdrasil kernel contract"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
